--- a/src/app/ticket/ticket-dialog.html
+++ b/src/app/ticket/ticket-dialog.html
@@ -1,2 +1,2 @@
-<h1 mat-dialog-title style="padding: 0 10px;">{{ticket.title}}</h1>
-<p style="padding: 0 10px;">{{ticket.description}}</p>
+<h1 mat-dialog-title class="dialog-title">{{ticket.title}}</h1>
+<p class="dialog-description">{{ticket.description}}</p>
