--- a/src/app/ticket/ticket-dialog.html
+++ b/src/app/ticket/ticket-dialog.html
@@ -1,2 +1,5 @@
-<h1 mat-dialog-title class="dialog-title">{{ticket.title}}</h1>
-<p class="dialog-description">{{ticket.description}}</p>
+  <h1 mat-dialog-title class="dialog-title">{{ticket.title}}</h1>
+
+  <textarea class="description-edit" [(ngModel)]="localDescription"></textarea>
+
+  <button class="save-button" (click)="saveDescription()">Save</button>
