--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,4 +1,6 @@
 <h1>{{ board?.title }}</h1>
+<input type="text" [(ngModel)]="columnToAddTitle" placeholder="Enter column title"/>
+<button class="add-column-button" (click)="addColumn(columnToAddTitle)">Save </button>
 <div class="columns">
   <app-column
     *ngFor="let column of board?.columns"
